# mdbook-gitinfo

./: .gitignore  404.html  Cargo.toml  Documentation.html  Introduction.html  LICENSE.md  README.md  index.html  llmtxt.sh  mdbook-alerts  searcher-c2a407aa.js  searchindex-539af8e7.js  searchindex.js  toc-b28167c7.js  toc.html
.github/workflows/: deploy.yml  release.yml
docs/: book.toml
docs/src/: Documentation.md  Introduction.md  SUMMARY.md
docs/theme/: gitinfo.css
example/mdbook/: book.toml
example/mdbook/src/: Documentation.md  Introduction.md  SUMMARY.md  VariousExamples.md
src/: chapters.rs  config.rs  git.rs  layout.rs  lib.rs  main.rs  processor.rs  renderer.rs  repo.rs  theme.rs  timefmt.rs
templates/: contributor.hbs
