[package]
name = "mdbook-gitinfo"
version = "2.0.0-alpha"
edition = "2024"
authors = ["Seb Blair <s.blair@gre.ac.uk>"]
description = "An mdBook preprocessor to inject Git commit metadata into generated books"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CompEng0001/mdbook-gitinfo"
readme = "README.md"
keywords = ["mdbook", "git", "preprocessor", "documentation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["cargo"] }
handlebars = "6.4.0"
mdbook-preprocessor = "0.5.0-beta.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml_edit = "0.23.9"
toml = "0.9.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]